# SpineRedraw

./: README.md
RedrawSpine-test/: .gitignore  ACTION_CHECKLIST.txt  CMakeLists.txt  COMPLETION_CERTIFICATE.txt  FINAL_REPORT.txt  PYTHON_CONFIG_FIX_README.md  QUICK_FIX.txt  README.md  SPEC.txt  STEP_BY_STEP_GUIDE.md  UVmapping.py  check_environment.ps1  fix_python_config.ps1  preproccess.py  spine2restposepsd.py  utility.py
RedrawSpine-test/.codebuddy/agents/: 小智.md
RedrawSpine-test/PSD/: meta.json
RedrawSpine-test/PSD/images/: rest.json
RedrawSpine-test/PSD/images1/: NeedRedraw.json
RedrawSpine-test/PSoutput/redraw/: sequence.txt
RedrawSpine-test/SpineProject/: 001_P.spine  Unit_Hum15.atlas  Unit_Hum15.json
RedrawSpine-test/SpineProject/images/: fake.atlas
RedrawSpine-test/include/: SkeletonDrawable.h  embedded_shaders.h  renderer.h  shader.h  texture.h  utility.cuh
RedrawSpine-test/include/embedded_shaders/: cleanAttachment.fs.glsl.inc  cleanAttachment.vs.glsl.inc  ctrl.glsl.inc  rgb.glsl.inc  uv_redraw.glsl.inc  vs.glsl.inc
RedrawSpine-test/sdout/4/: info.txt
RedrawSpine-test/spine-cpp/: CMakeLists.txt
RedrawSpine-test/spine-cpp/spine-cpp/include/spine/: SkeletonJson.h  Skin.h  Vector.h
RedrawSpine-test/spine-cpp/spine-cpp/src/spine/: SkeletonJson.cpp
RedrawSpine-test/src/: SkeletonDrawable.cpp  cleanAttachment.cpp  main.cpp  renderer.cpp  texture.cpp  utility.cpp
RedrawSpine-test/stb_image/: stb_image.cpp
